--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,9 +3,9 @@
     "idered.npm",
     "redhat.vscode-yaml",
     "usernamehw.errorlens",
-    "gruntfuggly.todo-tree",
     "esbenp.prettier-vscode",
     "yoavbls.pretty-ts-errors",
+    "editorconfig.editorconfig",
     "yzhang.markdown-all-in-one",
     "hbenl.vscode-mocha-test-adapter",
     "christian-kohler.npm-intellisense",
